--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nodemon": "nodemon"
   },
   "dependencies": {
+    "@angular/cli": "^6.2.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
