--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@angular/cli": "^6.2.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-jwt": "^8.4.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.9.2",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "seedgoose": "^2.0.2"
   }
